2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 412_lastlog_-u_numerical_range
	* NEWS, src/lastlog.c, man/lastlog.8.xml: Accept numerical user, or
	ranges with the -u option.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 466_fflush-prompt
	* libmisc/Makefile.am, lib/prototypes.h, libmisc/yesno.c, src/grpck.c,
	src/pwck.c: move yes_or_no() from grpck/pwck to a separate
	libmisc/yesno.c (with a read_only argument).
	* libmisc/fields.c, libmisc/yesno.c: Make sure stdout is flushed before
	reading the user's answer.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge Debian's patch 480_getopt_args_reorder
	* NEWS, src/su.c: su's arguments are now reordered.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge RedHat's patch shadow-4.0.18.1-mtime.patch:
	* NEWS: Document that usermod will now preserve user's file modification
	and access time.
	* libmisc/copydir.c: Preserve the access and modification time of copied
	files. This is important for usermod. This will also impact useradd, for
	the skeleton files, but this is not important.
	* libmisc/copydir.c: Stop and return an error if a file could not be
	closed after during a copy.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Cleanups:
	* src/useradd.c (find_new_gid): Check that gflg is not set (assert).
	* src/useradd.c (find_new_gid): Do not check the group name uniqueness
	(already checked in main).
	* src/useradd.c (find_new_gid): Avoid a "continue" in the loop.
	* src/useradd.c (find_new_gid): Remove irrelevant comments.
	* src/useradd.c (find_new_gid): Fix the function definition's comment.

2007-12-26  Nicolas François  <nicolas.francois@centraliens.net>

	Merge RedHat's patch shadow-4.0.18.1-findNewUidOnce.patch:
	* src/useradd.c (usr_update): Do not call find_new_uid(). The UID was
	already either specified or found by another call to find_new_uid().