@@ -16,6 +16,8 @@ shadow-4.1.0 -> shadow-4.1.1						UNRELEASED
 - lastlog
   * Accept users specified as a numerical UID, or ranges of users (-user,
     user-, user1-user2).
+- passwd
+  * Make sure that no more than one username argument was provided.
 
 shadow-4.0.18.2 -> shadow-4.1.0						09-12-2008
 
